[2008--] 1.0.1
* Fixed a {foreach} bug with the implode argument
* Fixed modulo operator in if statements
* Fixed date_format handling of negative and small unix timestamps
* Fixed a weird reference bug with ZF and includes.. whatever but thanks 
  to Denis Arh for the patch

[2008-10-23] 1.0.0
! BC Break: Small one that probably won't affect anyone, but it makes the
  PluginProxy feature much stronger. Basically if you used a custom one you
  will get a fatal error and need to update it to conform to the new
  IPluginProxy interface, that's it
+ Compiler: the modifier syntax (|foo) can now be applied on functions and on
  complex variables i.e. {$obj->getStuff()|upper} or {lower('foo')|upper}
+ SmartyCompat: Added a {section} plugin but I strongly discourage using it,
  it was really made to support legacy templates, since {for} doesn't have to
  handle {section}-BC anymore, it has been cleaned up a lot and the last 
  $skip parameter has been dropped
* The core Dwoo class doesn't need writable compile/cache dirs in the
  constructor anymore so you can provide custom ones later through
  ->setCompile(/Cache)Dir - thanks to Denis Arh for the patch
* Adapters: Zend: major overhaul thanks to Denis Arh, templates files should
  probably be moved in the scripts subfolder after this update though, and
  the settings array has changed a bit, you will get warnings if you don't
  update the code anyway
* Plugins: improved the dump plugin, it now displays object's properties
  and optionally public methods (if the new show_methods arg is set to true)
  - thanks to Stephan Wentz for the patch
* Adapters: Zend: Added parameters to provide a custom engine (extends Dwoo)
  or a custom data class (extends Dwoo_Data) - thanks to Maxime Merian for
  the patch
* Compiler: added Dwoo_Compiler->setNestedCommentsHandling(true) to enable
  parsing of nested comments (i.e. {* {* *} *} becomes a valid comment, useful
  to comment out big chunks of code containing comments)